# eld

./: .buildinfo  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build-status.db  coverage-baseline.txt  genindex.html  index.html  objects.inv  search.html  searchindex.js  versions.html  versions.json
.github/: pr-labeler.yml  release.yml  zephyr-quarantine.yml
.github/scripts/: check-test-results.sh  expected-failures.txt
.github/workflows/: arch-package.yml  biweekly-changelog-generator.yml  busybox-eld.yml  ci-win.yml  ci.yml  clang-cross-download.yml  clang-cross-schedule.yml  clang-format-pr.yml  cpp-linter-pr.yml  debian-package.yml  docs-multiversion.yaml  docs.yaml  fedora-rpm.yml  new-pr.yml  nightly-eld-code-coverage.yml  nightly-llvm-test-suite.yml  nightly-musl-builder.yml  nightly-test.yml  picolibc-builder.yml  release.yml  reviter.yml  sanitize.yml  test-coverage-workflow.yml  update-build-dashboard-data.yml  win-ci.yml  windowsci.yml  zephyr-nightly.yml  zephyr-run.yml
22.x/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
22.x/documentation/: command.html  elf_tools.html  getting_image_details.html  image_structure_and_generation.html  layout.html  linker_diagnostics.html  linker_faq.html  linker_map_files.html  linker_optimizations.html  linker_overview.html  linker_plugin.html  linker_plugins_updated.html  linker_script.html  linker_support_backward_compatibility.html  linking_modes_supported.html  supported_targets.html  target_specific_features.html
Plugins/HelloWorldPlugin/: HelloWorldPlugin.cpp
dash/: busybox_status_data.py  dash.html  muslBuilds.html  musl_status_data.py  nightly_status_data.py  picolibc_status_data.py  reverse_iterator_status_data.py  sanitizer_status_data.py  windows_nightly_status_data.py
docs/DeveloperDocs/: IFunc.md  (+2 more)
docs/design/: CMakeLists.txt  conf.py.in
documentation/: command.html  elf_tools.html  getting_image_details.html  image_structure_and_generation.html  layout.html  linker_diagnostics.html  linker_faq.html  linker_map_files.html  linker_optimizations.html  linker_overview.html  linker_plugin.html  linker_plugins_updated.html  linker_script.html  linking_modes_supported.html  supported_targets.html  target_specific_features.html
test/: CMakeLists.txt  eld_test_formats.py  lit.cfg  lit.site.cfg.in
(+1410 files in other folders)
